--- a/package.json
+++ b/package.json
@@ -1,36 +1,23 @@
 {
-    "title": "Full Width Pics",
+    "title": "Full Width Art Page",
     "name": "startbootstrap-full-width-pics",
-    "version": "4.2.1",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
     },
     "description": "A showcase of art produced as part of my AP English Course",
-    "keywords": [
-        "css",
-        "sass",
-        "html",
-        "responsive",
-        "theme",
-        "template"
-    ],
     "homepage": "https://startbootstrap.com/template-overviews/full-width-pics",
     "bugs": {
         "url": "https://github.com/BlackrockDigital/startbootstrap-full-width-pics/issues",
         "email": "feedback@startbootstrap.com"
     },
     "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
+    "author": "Yuxuan Song",
     "repository": {
         "type": "git",
         "url": "https://github.com/BlackrockDigital/startbootstrap-full-width-pics.git"
     },
     "dependencies": {
-        "bootstrap": "4.6.0",
-        "jquery": "3.5.1"
+        "bootstrap": "^4.6.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.14",
